--- a/rutor/Cargo.toml
+++ b/rutor/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bencode = { path = "../bencode" }
+bytes = "1.9.0"
 reqwest = { version = "0.12.8", features = ["blocking"] }
 serde = { version = "1.0.210", features = ["derive"] }
 sha1 = "0.10.6"
