--- a/rutor/Cargo.toml
+++ b/rutor/Cargo.toml
@@ -10,3 +10,7 @@ reqwest = { version = "0.12.8", features = ["blocking"] }
 serde = { version = "1.0.210", features = ["derive"] }
 sha1 = "0.10.6"
 slotmap = "1.0.7"
+
+[profile.release]
+debug = true
+
