--- a/rutor/Cargo.toml
+++ b/rutor/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bencode = { path = "../bencode" }
 bytes = "1.9.0"
+rand = "0.8.5"
 reqwest = { version = "0.12.8", features = ["blocking"] }
 serde = { version = "1.0.210", features = ["derive"] }
 sha1 = "0.10.6"
