tokio-rework squash merge:
commit d5ee71dba12db2df17de7a14384c1651136b4a1d
Author: diogo464 <diogo464@protonmail.com>
Date:   Mon Jan 13 22:47:54 2025 +0000

    removed some functions for now

commit d6f3eed10300ee267062469187da2e7cc4e6e4aa
Author: diogo464 <diogo464@protonmail.com>
Date:   Mon Jan 13 22:45:10 2025 +0000

    fixed rendering with busy scheduler

    when the scheduler does not have enough dedicated threads to running
    blocking tasks it seems like calling block_in_place will place the
    current task in a queue. this was freezing the rendering when to many
    disk read requests were happening at the same time.

commit 9fdd4efc1d96ee824974b65da7d409edbc3faf05
Author: diogo464 <diogo464@protonmail.com>
Date:   Mon Jan 13 22:33:17 2025 +0000

    proper session shutdown

commit 0971161b9d0ab365c16268dcb9e0084b5dd420ba
Author: diogo464 <diogo464@protonmail.com>
Date:   Mon Jan 13 22:18:49 2025 +0000

    download working

commit 1236f820bd7e9b47032629c9a6eab184fefb2366
Author: diogo464 <diogo464@protonmail.com>
Date:   Mon Jan 13 14:36:18 2025 +0000

    snapshot

--- a/rutor/Cargo.toml
+++ b/rutor/Cargo.toml
@@ -11,6 +11,7 @@ reqwest = { version = "0.12.8", features = ["blocking"] }
 serde = { version = "1.0.210", features = ["derive"] }
 sha1 = "0.10.6"
 slotmap = "1.0.7"
+tokio = { version = "1.43.0", features = ["full"] }
 tracing = "0.1.41"
 
 [profile.release]
