--- a/rutor-cli/Cargo.toml
+++ b/rutor-cli/Cargo.toml
@@ -12,3 +12,4 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 color-eyre = "0.6.3"
 tui-logger = { version = "0.14.1", features = ["tracing-support"] }
 ratatui = { version = "0.29.0", features = ["all-widgets", "crossterm"] }
+tokio = { version = "1.43.0", features = ["full"] }
